--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
             <div class="swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="sikaaa/FRUIT.jpg" alt="Hibiscus Fruit Punch" />
+                        <img src="sikaaa/SOBO.jpeg" alt="Hibiscus Fruit Punch" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="sikaaa/PEAR.jpeg" alt="Grapes/ Pear Juice" />
+                        <img src="sikaaa/RBERRY.jpef" alt="Berry Juice" />
                     </div>
                     <div class="swiper-slide">
                         <img src="sikaaa/yoghurt.jpeg" alt="Greek yprghurt Mint Burst" />
